add swagger docs for genre feature
